# etc7fq_journal_DS5111su24

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  pytest.ini  requirements.txt  tokenizer.py
.github/workflows/: validations.yml
src/pkg_etc7fq/: __init__.py  tokenizer.py
tests/: test_clean_text.py  test_count_words.py  test_tokenize.py
